package com.kumorai.nexo.academic.entity;

public enum DayOfWeek {
    LUNES,
    MARTES,
    MIERCOLES,
    JUEVES,
    VIERNES,
    SABADO,
    DOMINGO
}
