package com.kumorai.nexo.academic.entity;

public enum ElectiveType {
    INTRINSECA,
    EXTRINSECA,
    NINGUNA
}
